# flywheel

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  golden_set.json  litellm.skill  plan.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/langfuse/: SKILL.md
.claude/skills/langfuse/references/: prompt-management.md
.claude/skills/litellm/: SKILL.md
.claude/skills/litellm/references/: custom-callbacks.md
app/: gradio_app.py  tools.py
docker-compose/: docker-compose.yml
docs/: plan.md
lib/: kafka_callback.py  langfuse_prompt.py  prompt_manager.py
processors/: evaluator.py  learner.py
prompts/: current.prompt.md
scripts/: reset_prompts.sh  seed_langfuse.py
